apps/media/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: tautulli
    app.kubernetes.io/name: tautulli
  name: tautulli
  namespace: media
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: tautulli
      app.kubernetes.io/name: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: tautulli
        app.kubernetes.io/name: tautulli
    spec:
      containers:
        - name: tautulli
          image: tautulli
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8181
              name: http
              protocol: TCP

          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10

          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi

          volumeMounts:
            - mountPath: /config/config.xml
              name: config
              readOnly: true
              subPath: config.xml


      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: tautulli-config
            items:
              - key: config.xml
                path: config.xml
