apps/media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: tautulli
    app.kubernetes.io/name: tautulli
  name: tautulli
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: tautulli
    app.kubernetes.io/name: tautulli
  type: ClusterIP
